--- a/exponential.Rmd
+++ b/exponential.Rmd
@@ -142,6 +142,10 @@ Colab and play around with it.
 
 <script src="https://gist.github.com/dlsun/bd5d8d3520706eee3526691fd967a02e.js"></script>
 
+The exponential distribution has a surprising property called the **memoryless property**.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aRJIMPUdvOw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ```{theorem memoryless, name="Memoryless Property of the Exponential Distribution"}
 An exponential random variable $X$ has the **memoryless property**. That is, for any 
 $s, t > 0$, 
@@ -203,9 +207,10 @@ rate of 6 per hour.
     second planes land?
     c. What is the probability that it takes more than 15 minutes elapse before the first plane lands 
     _and_ more than 15 minutes elapse between when the first and second planes land?
-    d. What is the probability that more than 30 minutes elapse before the first two planes land? 
+    d. What is the probability that more than 30 minutes elapse before two planes have landed? 
     Why is the answer different than your answer to part c? (_Hint:_ You can calculate this 
-    using properties of a Poisson process.)
+    using properties of a Poisson process. Rewrite the event in terms of the number of planes that 
+    land in the interval $(0, 30)$.)
 
 3. A post office has 2 clerks. Alice enters the post office while 2 other customers, Bob
 and Claire, are being served by the 2 clerks. She is next in line. Assume that the time
